Cherry-pick ba9843b7c5a2. rdar://170186785

[block-in-inline] Missing content caused by insufficient partial layout with mixed dirty inline and block content
    https://bugs.webkit.org/show_bug.cgi?id=307553

    Reviewed by Antti Koivisto.

    The combination of dirty inline and block content is not yet supported by IFC's partial layout.
    Let's fallback to full layout when we see such content.

    Tests: fast/inline/partial-change-with-block-in-inline-assert-ref.html
           fast/inline/partial-change-with-block-in-inline-assert.html

    * LayoutTests/fast/inline/partial-change-with-block-in-inline-assert-expected.html: Added.
    * LayoutTests/fast/inline/partial-change-with-block-in-inline-assert-ref.html: Added.
    * LayoutTests/fast/inline/partial-change-with-block-in-inline-assert.html: Added.
    * Source/WebCore/rendering/RenderBlockFlow.cpp:
    (WebCore::RenderBlockFlow::markInlineContentDirtyForLayout):
    (WebCore::RenderBlockFlow::layoutInlineContent):
    * Source/WebCore/rendering/RenderBlockFlow.h:

    Canonical link: https://commits.webkit.org/307291@main

Identifier: 305413.292@safari-7624-branch